force-app/main/default/objects/Job_Application__c/fields/Medicare_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Taxes__c</fullName>
    <description>Estimate of Medicare withholding</description>
    <label>Medicare Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>