force-app/main/default/objects/Job_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Position_Title__c</columns>
    <columns>Company__c</columns>
    <columns>Work_Model__c</columns>
    <columns>Location__c</columns>
    <columns>Salary__c</columns>
    <columns>Star_Rating__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>